# Rust-Serial-Plotter-Logger

./: Cargo.toml  README.md
.github/workflows/: Base-CI.yml
design/: gui_layout.uxf
src/: baud.rs  dummy_data_generator.rs  fake_serial_comms.rs  main.rs  main_window.rs  multi_line.rs  plot_window.rs  serial_comms.rs  single_line.rs
src/main_window/: log_settings_pane.rs  mod.rs  plot_pane.rs  plot_settings_pane.rs  serial_settings_pane.rs
