[package]
name = "rust-serial-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19"
egui_extras = "0.19"
rand = "0.8.5"
color-eyre = "0.6.2"
tracing = "0.1.36"
tracing-subscriber = "0.3"
serialport = "4.2.0"
strum = { version = "0.21", features = ["derive"] }
human-sort = "0.2.2"

[features]
default = ["real-serial-comms"]
fake-build = ["fake-serial-comms"]

real-serial-comms = []
fake-serial-comms = []
